<resources>
    <string name="msg_no_internet_connect">No Internet Connection.</string>
    <string name="msg_updating_user_on_openfire">Updating User on Openfire</string>
    <string name="msg_failed_to_update_user_on_openfire">Failed to update user On Openfire.</string>
    <string name="msg_unable_to_add_user_openfire">Unable to add user in group in openfire.</string>
    <string name="msg_permission_image_notification">If you want to send Image, you have to enable permission setting.</string>
    <string name="msg_permission_audio_notification">If you want to send Audio, you have to enable permission setting.</string>
    <string name="msg_permission_write_storage_notification">If you want to send file, you have to enable permission setting.</string>
    <string name="msg_set_up_finger_print">If you want to Use Touch Id Login, you have to set up FingerPrint Id in Setting.</string>
    <string name="msg_group_not_exist">Group does not exist in openfire.</string>
    <string name="msg_no_member">You are not member in this group.</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="enter_message">Enter Message</string>
    <string name="send">Send</string>
    <string name="txt_today">Today</string>
    <string name="txt_yesterday">Yesterday</string>
    <string name="cancel">Cancel</string>
    <string name="use_password">Use password</string>
    <string name="sign_in">Sign in</string>
    <string name="ok">OK</string>
    <string name="password">Password</string>
    <string name="fingerprint_description">Confirm fingerprint to continue</string>
    <string name="fingerprint_hint">Touch sensor</string>
    <string name="password_description">Enter your App password to continue</string>
    <string name="fingerprint_not_recognized">Fingerprint not recognized. Try again</string>
    <string name="fingerprint_success">Fingerprint recognized</string>
    <string name="new_fingerprint_enrolled_description">A new fingerprint was added to this device, so your password is required.</string>
    <string name="use_fingerprint_in_future">Use fingerprint in the future</string>
    <string name="use_fingerprint_to_authenticate_title">Use fingerprint to authenticate</string>
    <string name="use_fingerprint_to_authenticate_key">use fingerprint to authenticate key</string>
    <string name="description_fingerprint_icon">Fingerprint icon</string>
    <string name="user">User</string>
    <string name="use_touch_id">Use Touch ID</string>
    <string name="remember_me">Remember me</string>
    <string name="username">Username</string>
    <string name="forgotten_your_detail">Forgotten your detail?</string>
    <string name="forgotten_password">Forgotten Password</string>
    <string name="switch_user">Switch User</string>
    <string name="str_title_app_update">Updating Program</string>
    <string name="str_msg_app_update">Update to the latest version to continue to use</string>
    <string name="str_btn_quit">Quit</string>
    <string name="str_btn_update">Update Now</string>
    <string name="str_image_desc">image description</string>
    <string name="full_name">Full Name :</string>
    <string name="email">Email :</string>
    <string name="phone">Phone :</string>
    <string name="mobile">Mobile :</string>
    <string name="logout">Quit</string>
    <string name="submit">Submit</string>
    <string name="note">Note :</string>
    <string name="your_account_has_been_logged_on_to_another_device">Your account has been logged on to another device.</string>
    <string name="tap_to_green_button_to_start_recording_and_tap_red_button_to_stop_recording">Tap to green button to start recording and tap red button to stop recording.</string>
    <string name="please_enter_message">Please enter message</string>
    <string name="please_provide_permission_to_app_from_setting">Please provide permission to app from setting</string>
    <string name="groups">Groups</string>
    <string name="members">Members</string>
    <string name="tee_transferee">TEE: %s</string>
    <string name="please_click_green_button_to_record_audio">please click green button to record Audio.</string>
    <string name="please_enter_login_name">Please Enter login name</string>
    <string name="please_enter_password">Please Enter Password</string>
    <string name="profile">Profile</string>
    <string name="msg_audio_file_does_not_exist">Audio file Does not exist.</string>
    <string name="msg_no_more_messages">No more messages.</string>
    <string name="msg_message_not_sent">Message not sent.</string>
    <string name="msg_allow_permission_contact">You have to allow contact read  permission for this Action</string>
    <string name="text_version">Version %s</string>
    <string name="txt_remember">Remember to keep your devices and personal information safe.</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="permission_audio_deny_message">you can\'t send audio without provide permissions</string>
    <string name="permission_image_deny_message">you can\'t send image without provide camera permission</string>
    <string name="permission_external_storage_deny_message">without read or write content app not work properly, please provide permission to access device data.</string>
    <string name="dialog_battery_title">Battery Optimization</string>
    <string name="dialog_battery_message">This permission is required for received push notification.</string>
    <string name="dialog_battery_button_negative">No</string>
    <string name="dialog_battery_button_positive">Allow</string>
    <string name="please_select_your_company">Please select your company!</string>

</resources>
