<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/bg_et_login"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/note"
        android:textAppearance="?android:textAppearanceLarge"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="@string/your_account_has_been_logged_on_to_another_device"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@color/colorBlack" />

    <TextView
        android:id="@+id/tvDialogOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="10dp"
        android:text="@string/ok"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="@color/colorGreen"
        android:textStyle="bold" />
</LinearLayout>