<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <LinearLayout
        android:id="@+id/llUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivUserImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:background="@drawable/login_user_icon"
            android:contentDescription="TODO" />

        <LinearLayout
            android:visibility="visible"
            android:id="@+id/llSavedDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxWidth="150dp"
                android:padding="2dp"
                android:textStyle="bold"
                android:singleLine="true"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/colorBlack"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:padding="2dp"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/colorBlack"
                android:text="@string/welcome_back" />
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/llMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/llUser"
        android:background="@color/colorLoginBg"
        android:orientation="vertical"
        android:paddingBottom="5dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="5dp">

        <LinearLayout
            android:id="@+id/llBtnUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:padding="6dp"
                android:text="@string/user"
                android:textAlignment="center"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/colorYellowBg" />

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="@color/colorInputHint" />

            <TextView
                android:id="@+id/tvLoginUseTouchId"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:padding="6dp"
                android:text="@string/use_touch_id"
                android:textAlignment="center"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/colorBlack" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/cbLoginRememberMe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/remember_me"
                android:textAppearance="?android:textAppearanceSmall" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/edt_loginname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_et_login"
                android:drawableLeft="@drawable/ic_username"
                android:drawablePadding="8dp"
                android:hint="@string/username"
                android:lines="1"
                android:maxLines="1"
                android:padding="8dp"
                android:singleLine="true"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorInputHint" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_et_login"
                android:drawableLeft="@drawable/ic_password"
                android:drawablePadding="8dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:lines="1"
                android:maxLines="1"
                android:padding="8dp"
                android:singleLine="true"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorInputHint" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tvLoginForgotten"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:padding="3dp"
                    android:text="@string/forgotten_your_detail"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@color/colorYellowBg" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tvLoginSwitchUser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="3dp"
                    android:text="@string/switch_user"
                    android:textAlignment="center"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@color/colorYellowBg" />
            </LinearLayout>


            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/signin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_sign_in"
                android:padding="10dp"
                android:text="@string/sign_in"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/colorWhite" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tvLoginAppVersion"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:text="@string/text_version"
                android:textAlignment="center"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/colorBlack" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/flRememberInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llMain"
        android:layout_margin="15dp"
        android:background="#FCF8E6"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_info_outline"
            android:drawablePadding="5dp"
            android:padding="10dp"
            android:text="@string/txt_remember"
            android:textAppearance="?android:textAppearanceSmall" />

        <ImageView
            android:id="@+id/ivClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="@drawable/ic_close" />
    </LinearLayout>
</RelativeLayout>
