<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.irmsimapp.activity.UserProfileActivity">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#DDDDDD"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">

        <com.irmsimapp.components.CircularImageView
            android:id="@+id/ivUserImg"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/default_user_icon" />

        <TextView
            android:id="@+id/tvUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:textColor="#8ED951"
            android:textSize="22sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#DDDDDD" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:text="@string/full_name"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvProfileFullName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.90"
                android:textColor="#000000" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.10"
                android:src="@drawable/right_aerrow"
                android:visibility="invisible" />


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#DDDDDD" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:text="@string/email"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvProfileEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.90"
                android:textColor="#000000" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.10"
                android:src="@drawable/right_aerrow"
                android:visibility="invisible" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#DDDDDD" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:text="@string/phone"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvProfilePhone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.50"
                android:textColor="#000000" />

            <ImageView
                android:id="@+id/ivCallPhone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.40"
                android:src="@drawable/ic_call"
                android:visibility="visible" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#DDDDDD" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:text="@string/mobile"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvProfileMobile"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.50"
                android:textColor="#000000" />

            <ImageView
                android:id="@+id/ivCallMobile"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.40"
                android:src="@drawable/ic_call"
                android:visibility="visible" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:visibility="gone"
        android:id="@+id/tvProfileLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/colorGreen"
        android:gravity="center"
        android:padding="7dp"
        android:text="@string/logout"
        android:textAllCaps="true"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="#ffffff"
        android:textStyle="bold" />

</LinearLayout>
